--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "http-errors": "~1.6.2",
     "js-md5": "^0.7.3",
     "morgan": "^1.10.0",
-    "mssql": "^6.3.1",
+    "mysql": "^2.18.1",
     "querystring": "^0.2.0",
     "request": "^2.88.0",
     "sha1": "^1.1.1"
